--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
+
+
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -6,6 +8,8 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "strictNullChecks": false,
+    "strictPropertyInitialization": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
@@ -28,3 +32,4 @@
     "strictTemplates": true
   }
 }
+
